--- a/seqware-distribution/pom.xml
+++ b/seqware-distribution/pom.xml
@@ -68,6 +68,17 @@
         </execution>
       </executions>
     </plugin>
+    
+    <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+    </plugin>
+
+    <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>sql-maven-plugin</artifactId>
+    </plugin>
+    
     </plugins>
   </build>
 </project>
