--- a/seqware-webservice/pom.xml
+++ b/seqware-webservice/pom.xml
@@ -26,19 +26,27 @@
 
   <plugin>
                 <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
+                <artifactId>jetty-maven-plugin</artifactId>
 		<!-- <version>7.0.0.pre5</version> -->
-                <version>6.1.26</version>
+                <version>7.6.8.v20121106</version>
                 <configuration>
+                    
+               <systemProperties>
+            <systemProperty>
+              <name>log4j.configurationFile</name>
+              <value>file:${project.basedir}/src/test/resources/log4j.properties</value>
+            </systemProperty>
+          </systemProperties>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
 		<!-- next three properties added for IT testing --> 
                     <stopPort>9999</stopPort>
                     <stopKey>STOP</stopKey>
+                     <waitForChild>false</waitForChild>
                    <!--  <contextPath>/</contextPath> -->
 
                     <connectors>
-                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector"> 
-                        <!-- <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector"> -->
+                        <!-- <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">  -->
+                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector"> 
                             <port>8889</port>
                             <maxIdleTime>60000</maxIdleTime>
                         </connector>
@@ -51,8 +59,8 @@
 		        <phase>test-compile</phase>	
                         <configuration>
                             <connectors>
+                               <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
                                <!-- <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector"> -->
-                               <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
                                     <port>8889</port>
                                 </connector>
                             </connectors>
@@ -66,13 +74,13 @@
                         <phase>test-compile</phase>	
 		        <!-- <phase>pre-integration-test</phase> -->	
                         <goals>
-                            <goal>run</goal>
+                            <goal>run-forked</goal>
                         </goals>
                         <configuration>
 		            <skip>${skipITs}</skip>
                             <connectors>
+                               <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector"> 
                                <!-- <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector"> -->
-                                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
                                     <port>8889</port>
                                 </connector>
                             </connectors>
@@ -89,6 +97,7 @@
                         </goals>
                     </execution>
                 </executions>
+                
             </plugin>
 
       <plugin>
@@ -376,6 +385,14 @@
                 <exclusion>
                     <artifactId>junit</artifactId>
                     <groupId>junit</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty</artifactId>
+                    <groupId>org.mortbay.jetty</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty-util</artifactId>
+                    <groupId>org.mortbay.jetty</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
